@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.sc2" name="Stream Cinema Community" version="3.0">
+<addon id="plugin.video.sc2" name="Stream Cinema Community" version="3.1">
 	<requires>
 		<import addon="enigma2.archivczsk" version="2.2.0"/>
 		<import addon="tools.archivczsk" version="1.8" />
