@@ -1,3 +1,6 @@
+2023-04-03 [3.1]
+* oprava scrobble pre trakt.tv
+
 2023-04-03 [3.0]
 * kompletný prepis doplnku postavený nad tools_archivczsk
 * úprava rozhrania po vzore oficiálneho kodi doplnku
